# sgraph-mcp-server

./: .gitignore  .mcp.json.example  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FUTURE.md  LICENSE  README.md  SGRAPH_FOR_CLAUDE_CODE.md  pyproject.toml  ruff.toml  sgraph_helper.py
.github/workflows/: ci.yml
docs/: 404.html  GLOBAL_CLAUDE_MD_SNIPPET.md  cypher-examples.md  index.html  sgraph-query-language.md
docs/architecture/: index.html
docs/faq/: index.html
docs/getting-started/: index.html
docs/mcp-tools/: index.html
docs/search/: search_index.json
performance_tests/: __init__.py  run_tests.py  test_bulk_analysis_performance.py
src/: server.py  server_modular.py  sgraph_helper.py
src/core/: __init__.py  element_converter.py  model_manager.py
src/profiles/: base.py  claude_code.py
src/services/: __init__.py  dependency_service.py  overview_service.py  search_service.py  security_service.py
src/tools/: __init__.py  analysis_tools.py  model_tools.py  navigation_tools.py  search_tools.py  security_report_cli.py
src/utils/: __init__.py  logging.py  validators.py
tests/: run_all_tests.py
tests/integration/: test_end_to_end.py  test_include_descendants.py  test_query_tools.py
tests/performance/: README.md  run_tests.py  test_all_search_performance.py  test_bulk_analysis_performance.py  test_model_overview_performance.py  test_overview_performance.py  test_search_performance.py
tests/unit/: test_collect_deps.py  test_model_manager.py  test_search_service.py  test_security_service.py
throwaway-ai-code/: README.md  cleanup_summary.md  modular_implementation_summary.md
tools/: MIGRATION_LOG.md  README.md
tools/analysis/: check_model_freshness.py  render_dep_graph.py
tools/debugging/: mcp_connection_test.py
tools/testing/: test_modular_components.py
