[project]
name = "sgraph-mcp"
version = "0.1.0"
description = "SGraph MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.0",
    "nanoid>=2.0.0",
    "pydantic>=2.11.4",
    "sgraph>=1.1.1",
]

[project.scripts]
sgraph-mcp-server = "src.server_modular:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2",
]
